--- a/AnalyseGenomeMFC/AnalyseGenomeMFC/AnalyseGenomeMFC.vcxproj.filters
+++ b/AnalyseGenomeMFC/AnalyseGenomeMFC/AnalyseGenomeMFC.vcxproj.filters
@@ -100,6 +100,7 @@
     <ClInclude Include="ClientSocket.h">
       <Filter>Network</Filter>
     </ClInclude>
+    <ClInclude Include="DiagTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConnectedSocket.cpp">
@@ -156,6 +157,7 @@
     <ClCompile Include="ClientSocket.cpp">
       <Filter>Network</Filter>
     </ClCompile>
+    <ClCompile Include="DiagTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AnalyseGenomeMFC.rc">
